--- a/paw2018b/frontend/src/css/Details.css
+++ b/paw2018b/frontend/src/css/Details.css
@@ -8,24 +8,21 @@ html{
 /* Details Style*/
 
 div.polaroid-details {
-  margin-top: 10px;
+  margin: 10px 0 25px 0;
   float: right;
   width: 35%;
-  background-color: white;
+  background-color: #fff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-bottom: 25px;
   max-height: 100%;
   min-width:  450px; 
   min-height: 200px; 
 }
 
 div.polaroid_price {
-  margin-top: 10px;
+  margin: 10px 0 25px 40px;
   width: 30%;
-  margin-left: 40px;
-  background-color: white;
+  background-color: #fff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin-bottom: 25px;
   min-width: 380px;
   min-height: 70px;
 }
@@ -33,7 +30,6 @@ div.polaroid_price {
 div.container-list {
   text-align: center;
   padding: 10px 20px;
-  
 }
 
 .imageSize{
@@ -54,13 +50,12 @@ div.container-list {
 .direction {
   font-family: 'Rubik', sans-serif !important;
   font-size: 16px;
-  margin-top: 5px;
-  margin-bottom: 10px;
+  margin: 5px 0 10px 0;
 	color: #555;
 	font-style: italic;
 }
 
-.next-image-details {
+.next-image-details, .prev-image-details {
 	height: 25px;
 	width: 25px;
 	top: 135px;
@@ -70,12 +65,7 @@ div.container-list {
 }
 
 .prev-image-details {
-	height: 25px;
-	width: 25px;
-	top: 135px;
-	left: 5px;
-	position: absolute;
-	cursor: pointer;
+	left: 5px !important;
 }
 
 /* End of style */
@@ -95,18 +85,16 @@ div.container2 {
 	font-family: 'Rubik', sans-serif !important;
     font-size: 18px;
     color: #999;
-    margin-bottom: 3px;
+    margin: 0 0 3px 10px;
     text-align: left;
-    margin-left: 20px;
 }
 
 #price_tag {
 	font-family: 'Rubik', sans-serif !important;
     font-size: 25px;
     color: #555;
-    margin-bottom: 2px;
+    margin: 0 0 2px 20px;
     text-align: left;
-    margin-left: 20px;
     
 }
 
@@ -117,7 +105,7 @@ div.container2 {
 div.polaroid_agency {
   margin: 30px 0 25px 40px; 
   width: 30%;
-  background-color: white;
+  background-color: #fff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   min-width: 380px;
   height: auto;
@@ -134,8 +122,7 @@ div.container3 {
 textarea {
   width: 100%;
   padding: 12px 20px;
-  margin-bottom: 8px;
-  margin-top: 0px;
+  margin: 0 0 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -172,7 +159,7 @@ label {
 	  background-color: #FD8907;
     border: none;
     border-radius: 4px;
-    color: white;
+    color: #fff;
     width:90% !important;
     height: 45px;
     padding: 5px 32px;
@@ -187,8 +174,7 @@ label {
 .invalid-feedback {
   color: red;
   font-size: 14px;
-  margin-top: 1px;
-  margin-left: 2px;
+  margin: 1px 0 0 2px;
 }
 
 .contact-title{
@@ -200,9 +186,8 @@ label {
 .agency_text_contact {
 	font-size: 21px;
 	color: #666;
-	margin-top: 10px;
+	margin: 10px 0 13px 10px;
 	text-align: left;
-	margin-left: 10px;
 }
 
 #tel-container {
@@ -228,7 +213,7 @@ label {
 div.polaroid_des {
   width: 880px;
   margin: 0 auto;
-  background-color: white;
+  background-color: #fff;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   margin-bottom: 40px;
 }
@@ -241,7 +226,7 @@ div.polaroid_des {
 }
 
 .agency_text {
-  overflow-wrap: break-word;
+  word-break: break-all;
 }
 
 /* End of style */
